--- a/src/components/Scoreboard.css
+++ b/src/components/Scoreboard.css
@@ -33,17 +33,26 @@
   text-align: center;
 }
 .last-ten-scores{
-    /* column-count: 2; 
-    column-gap: 16px;  */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
+  gap: 10px; /* Espacio entre los elementos */
     text-align: center;
     font-size:1.3rem;
     font-family: 'Press Start 2P', cursive;
   }
+  .last-score-container{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    gap:3rem
+  }
   .highest-score-container{
-      display: flex;
-      align-items: center;
-      padding:8px;
-      gap:15px
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+    
   }
   .highest-score{
     display:flex;
@@ -71,9 +80,7 @@
 
 
   @media (max-width:768px){
-    .highest-score-container{
-      flex-direction: column;
-    }
+    
     .highest-score{
       display:flex;
       justify-content: center;
@@ -85,7 +92,11 @@
       width:5rem;
      height:5rem;
       font-family: 'Press Start 2P', cursive;
-  
+    }
+    .last-ten-scores{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
+      gap: 10px; /* Espacio entre los elementos */
     }
 
   }
